test/ambig1.l1.out
1
2
3
4
0
84
88
104
108
4
1
2
3
4
84
88
104
108
1
2
3
4
4
5
7
7
4
error: attempt to apply & to non-lvalue
               error	(builtin function)
               entry	(ambig1.l1:78)
